# plugin-playbooks

./: .gitignore  LICENSE  README.md  pyproject.toml
plans/001-run-stats-in-list/: PLAN.md
plugin_playbooks/: __init__.py  agent_tools.py  definition.py  luna-plugin.toml  models.py  routes.py  runner.py  testing.py  trigger_bindings.py  triggers.py  validation.py
plugin_playbooks/ui/: index.html
plugin_playbooks/ui/assets/: index-BlK1Uo22.css  index-DD_eWVU9.js  index-DNyVmSI1.js
tests/: conftest.py  test_manifest.py  test_run_stats.py  test_smoke_import.py
ui-src/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
ui-src/src/: App.tsx  index.css  main.tsx
ui-src/src/lib/: auth.ts  events.ts
ui-src/src/playbooks/: PlaybookEditor.tsx  PlaybookRuns.tsx  PlaybooksSection.tsx  StateVizPanel.tsx  activityPresence.ts  api.ts  layout.ts  liveBus.ts  livePatch.ts  runReplay.ts  runStats.ts  types.ts
ui-src/src/playbooks/__tests__/: activityPresence.test.ts  livePatch.test.ts  runReplay.test.ts  runStats.test.ts
ui-src/src/playbooks/nodes/: StepNode.tsx  TriggerNode.tsx
