[project]
name = "plugin-playbooks"
version = "0.2.1"
description = "Durable multi-step playbooks for Luna — Luna builds them, triggers fire them. Built on luna_sdk v0."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110", "sqlalchemy>=2.0", "pydantic>=2", "pyyaml>=6", "jinja2>=3"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
